bug fix: model_load_and_save nor returning model

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ __pycache__/MultiSensorTimeSeriesGenerator\.cpython-36\.pyc
 utils/__pycache__/custom_utils\.cpython-36\.pyc
 
 utils/__pycache__/MultiSensorTimeSeriesGenerator\.cpython-36\.pyc
+
+utils/__pycache__/
