added images to master branch and updated gitignore to ignore dataset

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@ utils/MultiSensorTimeSeriesGenerator\.py\.lprof
 utils/objs\.pkl
 
 utils/program\.prof
+
+DATASET/Dataset to test time series generator/
